Fix event location spacing in event modal (#154)
* Fix event location position

* Change to %

--- a/app/client/styles/components/_eventList.scss
+++ b/app/client/styles/components/_eventList.scss
@@ -28,9 +28,11 @@
                     opacity: 0.85;
                     color: $events-description-color;
                 }
+                .event-time {
+                    width: 60%;
+                }
                 .event-coordinates {
                     display: flex;
-                    justify-content: space-between;
                     font-size: medium;
                     margin-top: 10px;
                     color: $events-coordinates-color;
